--- a/users/templates/website/cart.html
+++ b/users/templates/website/cart.html
@@ -278,11 +278,17 @@ h1,h2,h3,h4,h5,h6{
 									<br>
 									 
 								<hr class="no_line" style="margin:0 auto 20px">
-								<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
-								<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
-								<hr class="no_line" style="margin:0 auto 20px">
-								<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
-								<hr class="no_line" style="margin:0 auto 80px"> </div>
+								<div class="column one-second"> 
+
+									<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
+								</div>
+								<div class="column one-second"> 
+
+									<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
+								</div>
+								<hr style="margin:0 auto 20px">
+								<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US</a> </p>
+								<hr class="no_line" style="margin:0 auto 20px"> </div>
 						</div>
 					</aside>
 				</div>
@@ -301,12 +307,12 @@ h1,h2,h3,h4,h5,h6{
 				</div>
 			</div>
 		</div>
-		  <div  style="margin-top:-100px;margin-left:37%">
+		  <div  style="margin-top:-100px;margin-left:40%">
 				<div class="column one">
 					<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw">					
 				</div>
 		</div>
-		<div class="footer_copy" style="margin-left:40%">
+		<div class="footer_copy" style="margin-left:42%">
 				<div class="column one">
 					<div class="copyright"> &copy; <script>document.write(new Date().getFullYear());</script> Water Access Rwanda </div>
 				</div>
