--- a/users/templates/website/ijabo.html
+++ b/users/templates/website/ijabo.html
@@ -46,7 +46,7 @@
 						<div class="column one">
 							<div class="top_bar_left clearfix">
 								<div class="logo">
-									<a id="logo" href="{% url 'index' %}" ><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}"  data-no-retina style="height:40px;width:150px;padding-bottom:25px;"><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="30" alt="scooterrental" data-no-retina></a>
+									<a id="logo" href="{% url 'index' %}" ><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}"  data-no-retina style="height:35px;width:150px;padding-bottom:25px;"><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="30" alt="scooterrental" data-no-retina></a>
 								</div>
 								<div class="menu_wrapper">
 									<nav id="menu">
@@ -263,7 +263,7 @@
 
 
 						<div class="column_attr clearfix align_center" >
-								<h2><span class="themecolor gothic">
+								<h2 style="margin-top:100px"><span class="themecolor gothic">
 								BEFORE AND AFTER</span> </h2><br>
 								<h5 class="gothic">we conducted a pilot to see what our system would achieve for our users.<br> Here is what happened and what you can expect.</h5>
 												<hr class="no_line" style="margin:0 auto 20px">
@@ -272,28 +272,28 @@
 								<div class="wrap mcb-wrap mcb-wrap-zk9pzc9s5 one valign-top move-up clearfix" style="margin-top:30px" data-mobile="no-up">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-qyuetn73g one-fourth column_quick_fact">
-											<div class="quick_fact align_ animate-math">
+											<div class="quick_fact align_ animate-math" style="margin-right:30px">
 											<div><img class="scale-with-grid" src="{% static "web/images/money.png" %}" style="width:50px;height:50px"></div>
 											<h4><span class="themecolor gothic">Save Money</span> </h4>												
-											<h5 class="gothic">ALL HOUSEHOLDS reduced their water bill by 58% One family went from RWF 25,000 to Just RWF 6,000!.</h5>
+											<h5 class="gothic" style="text-align: center;">ALL HOUSEHOLDS reduced their water bill by 58% One family went from RWF 25,000 to Just RWF 6,000!.</h5>
 												<hr class="hr_narrow">
 												<div class="desc"></div>
 											</div>
 										</div>
 										<div class="column mcb-column mcb-item-z73733ieu one-fourth column_quick_fact">
-											<div class="quick_fact align_ animate-math">
+											<div class="quick_fact align_ animate-math" style="margin-right:30px">
 												<div><img class="scale-with-grid" src="{% static "web/images/maledrink.png" %}" style="width:50px;height:50px"> </div>
 											   <h4><span class="themecolor gothic">Trust your water tap</span> </h4>
-												<h5 class="gothic">Savings: 100% of all households were buying their drinking water, after our system 63% had switched to drinking from their taps.</h5>
+												<h5 class="gothic" style="text-align: center;">Savings: 100% of all households were buying their drinking water, after our system 63% had switched to drinking from their taps.</h5>
 												<hr class="hr_narrow">
 												<div class="desc"></div>
 											</div> 
 										</div>
 										<div class="column mcb-column mcb-item-5fltm4adk one-fourth column_quick_fact">
-											<div class="quick_fact align_ animate-math">
+											<div class="quick_fact align_ animate-math" style="margin-right:30px">
 												<div><img class="scale-with-grid" src="{% static "web/images/glass.png" %}" style="width:50px;height:50px"> </div>
 											   <h4><span class="themecolor gothic">Safe and Clean for Drinking</span> </h4> </div>
-												<h5 class="gothic">Before no one trusted drinking rainwater, this number increased to 87% drinking directly from their taps.</h5>
+												<h5 class="gothic" style="text-align: center;">Before no one trusted drinking rainwater, this number increased to 87% drinking directly from their taps.</h5>
 												<hr class="hr_narrow">
 												<div class="desc"></div>
 											</div>
@@ -301,8 +301,8 @@
 										<div class="column mcb-column mcb-item-hfbzurgtu one-fourth column_quick_fact">
 											<div class="quick_fact align_ animate-math">
 												<div><img class="scale-with-grid" src="{% static "web/images/cooking.png" %}" style="width:50px;height:50px"> </div>
-											   <h4 class="gothic"><span class="themecolor">Cooking Made Easy</span> </h4> </div>
-												<h5 class="gothic">Only 33% of households trusted their water for cooking, this increased to 100% after the installation of our system.</h5>
+											   <h4 class="gothic"><span class="themecolor" style="margin-right:30px">Cooking Made Easy</span> </h4> </div>
+												<h5 class="gothic" style="text-align: center;">Only 33% of households trusted their water for cooking, this increased to 100% after the installation of our system.</h5>
 												<hr class="hr_narrow">
 												<div class="desc"></div>
 											</div>
@@ -352,8 +352,8 @@
 									<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
-									<hr class="no_line" style="margin:0 auto 80px"> </div>
+									<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US </a> </p>
+									<hr class="no_line" style="margin:0 auto 20px"> </div>
 							</div>
 						</aside>
 					</div>
@@ -372,10 +372,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer_copy" style="margin-top:-100px">
+			<div class="footer_copy" style="margin-top:-200px">
 				<div>
 					<div class="column one">
-						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw" data-no-retina>					</div>
+						<img width='20%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw">					</div>
 				</div>
 			</div>
 			<div class="footer_copy">
