--- a/users/templates/website/checkout.html
+++ b/users/templates/website/checkout.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazi.rw</title>
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
 	<link rel='stylesheet' href="{% static "web/css/global.css"%}">
     <link rel='stylesheet' href="{% static "web/css/structure.css"%}">
@@ -307,11 +308,17 @@ h1,h2,h3,h4,h5,h6{
 									<br>
 									 
 								<hr class="no_line" style="margin:0 auto 20px">
-								<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
-								<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
-								<hr class="no_line" style="margin:0 auto 20px">
-								<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
-								<hr class="no_line" style="margin:0 auto 80px"> </div>
+								<div class="column one-second"> 
+
+									<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
+								</div>
+								<div class="column one-second"> 
+
+									<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
+								</div>
+								<hr style="margin:0 auto 20px">
+								<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US</a></p>
+								<hr class="no_line" style="margin:0 auto 20px"> </div>
 						</div>
 					</aside>
 				</div>
@@ -321,21 +328,21 @@ h1,h2,h3,h4,h5,h6{
 							<div style="text-align: center;">
 								<h6 style="color:#7d7d7d">MORE INFO</h6>
 								<hr class="no_line" style="margin:0 auto 20px">
-								<p class="gothic"><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x"></i>&nbsp&nbsp&nbsp Twitter</a> </p>
-								<p class="gothic"><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x"></i>&nbsp&nbsp&nbsp Facebook</a> </p>
-								<p class="gothic"><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>&nbsp&nbsp&nbsp Instagram</a> </p>
+								<p class="gothic"><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fab fa-twitter-square fa-2x"></i>&nbsp&nbsp&nbsp Twitter</a> </p>
+									<p class="gothic"><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fab fa-facebook-square fa-2x"></i>&nbsp&nbsp&nbsp Facebook</a> </p>
+									<p class="gothic"><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fab fa-instagram fa-2x"></i>&nbsp&nbsp&nbsp Instagram</a> </p>
 							</div>
 						</div>
 					</aside>
 				</div>
 			</div>
 		</div>
-		  <div  style="margin-top:-100px;margin-left:37%">
+		  <div  style="margin-top:-100px;margin-left:40%">
 				<div class="column one">
 					<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw">					
 				</div>
 		</div>
-		<div class="footer_copy" style="margin-left:40%">
+		<div class="footer_copy" style="margin-left:42%">
 				<div class="column one">
 					<div class="copyright"> &copy; <script>document.write(new Date().getFullYear());</script> Water Access Rwanda </div>
 				</div>
