--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -131,7 +131,7 @@
 						</div>
 						<br><br>
 						<div class="column_attr clearfix align_center" >
-								<h2 style="margin-top:100px"><span class="themecolor gothic">
+								<h2 style="margin-top:35px"><span class="themecolor gothic">
 								BEFORE AND AFTER</span> </h2><br>
 								<h5 class="gothic">we conducted a pilot to see what our system would achieve for our users.<br> Here is what happened and what you can expect.</h5>
 												<hr class="no_line" style="margin:0 auto 20px">
@@ -270,7 +270,7 @@
 
 		<div style="background-color:#fafafa">
 
-		     <h2 class="themecolor gothic column one" style="text-align: center;padding-bottom:50px;background-color:#fafafa">OUR PARTNER</h2>
+		     <h2 class="themecolor gothic column one" style="text-align: center;padding-bottom:50px;background-color:#fafafa;padding-top:50px">OUR PARTNER</h2>
 		<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-bottom:30px;padding-left:200px;">
 							<div class="section_wrapper mcb-section-inner">
 								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 column one-second valign-middle clearfix" >
@@ -359,8 +359,8 @@
 									<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}" class="gothic">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
-									<hr class="no_line" style="margin:0 auto 80px"> </div>
+									<p> <a href="{% url 'contact_us' %}" class="gothic">CONTACT US</a> </p>
+									<hr class="no_line" style="margin:0 auto 20px"> </div>
 							</div>
 						</aside>
 					</div>
@@ -382,7 +382,7 @@
 			<div class="footer_copy" style="margin-top:-200px">
 				<div>
 					<div class="column one">
-						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw">					</div>
+						<img width='20%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw">					</div>
 				</div>
 			</div>
 			<div class="footer_copy">
