--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -270,7 +270,7 @@
 
 		<div style="background-color:#fafafa">
 
-		     <h2 class="themecolor gothic column one" style="text-align: center;padding-bottom:50px;background-color:#fafafa;padding-top:50px">OUR PARTNER</h2>
+		     <h2 class="themecolor gothic column one" style="text-align: center;padding-bottom:30px;background-color:#fafafa;margin-top:100px">OUR PARTNER</h2>
 		<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-bottom:30px;padding-left:200px;">
 							<div class="section_wrapper mcb-section-inner">
 								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 column one-second valign-middle clearfix" >
@@ -296,7 +296,7 @@
 			</div>
 		</div>
 
-							<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-top:10px;padding-bottom:20px">
+							<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="margin-top:60px;padding-bottom:20px">
 							<div class="section_wrapper mcb-section-inner">
 							<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" style="padding:0 5%">
 									<div class="mcb-wrap-inner">
