--- a/users/templates/website/post.html
+++ b/users/templates/website/post.html
@@ -53,8 +53,8 @@
 										<ul id="menu-main-menu" class="menu menu-main" >
 											<li class="  page_item "> <a href="{% url 'index' %}"><span class="gothic">Home</span></a> </li>
 											{% comment %} <li> <a href="{% url 'about' %}"><span>About us</span></a> </li> {% endcomment %}
-											<li class="current-menu-item"> <a href="{% url 'rainwater' %}"><span class="gothic">Rain Water</span></a> </li>
-											<li> <a href="{% url 'blog' %}"><span class="gothic">Blog</span></a> </li>
+											<li> <a href="{% url 'rainwater' %}"><span class="gothic">Rain Water</span></a> </li>
+											<li class="current-menu-item"> <a href="{% url 'blog' %}"><span class="gothic">Blog</span></a> </li>
 											<li> <a href="{% url 'contact_us' %}"><span class="gothic">Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="fa fa-bars" ></i></a> </div>
@@ -83,8 +83,8 @@
                             </a>
                         </div>
 
-                        <div class="column mcb-column mcb-item-hfbzurgtu one-one column_quick_fact" style="margin-right:10%;margin-left:12%;margin-top:10px" >
-                            <h5 class="gothic" style="text-align: center;">{{blog.Details}}</h5>
+                        <div class="column mcb-column mcb-item-hfbzurgtu one-one column_quick_fact" style="margin-right:10%;margin-left:15%;margin-top:10px" >
+                            <h5 class="gothic" style="text-align: left;">{{blog.Details}}</h5>
                         </div>
 						
 						
